--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>My Super Cool Repo!</title>
+  <title>Biggie's Nutz</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
+  
 </head>
 <body>
-  <h1> C4m3r0n's Cydia Repository </h1>
-  <a class="cydiaLink" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://biggiecam.github.io/cydia.biggie.github.io/"> Click here to add C4m3r0n's Repo to Cydia!
+  <h1> c4m3r0n's Cydia Repository </h1>
+  <a class="cydiaLink" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://biggiecam.github.io/cydia.biggie.github.io/"> Click this bitch to add c4m3r0n's Repo to Cydia!
 </body>
 </html>
