--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Biggie's Nutz</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
-  
+
 </head>
 <body>
   <h1> c4m3r0n's Cydia Repository </h1>
-  <a class="cydiaLink" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://biggiecam.github.io/cydia.biggie.github.io/"> Click this bitch to add c4m3r0n's Repo to Cydia!
+  <a class="cydiaLink" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://biggiecam.github.io/cydia.biggie.github.io/"> Click Me For c4m3r0n's Repo to Cydia!
 </body>
 </html>
